test/files/errors/missingRet.jg
lol int ()
{
    content string = "hello world";

    content.append("h");
}

_main int ()
{
    () lol;
    0 return;
}